--- a/src/pages/score/score.scss
+++ b/src/pages/score/score.scss
@@ -16,7 +16,7 @@ page-score {
                 
                 }
                 .column1:hover{
-                    border: 5px solid white;
+                    border: 5px solid white;        
                 
                     
                     
@@ -70,6 +70,9 @@ page-score {
             }
             .button1{
                 width: 100px;
+            }
+            .button2{
+                width: 150px;
             }
             
             }
